Initial commit of rewrite in Go
